--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -142,12 +142,10 @@ jobs:
           args: --report-format=json --report-path=gitleaks-results.json
 
   # -------------------
-  # 2️⃣ Nexus Lifecycle Scans (Separated)
+  # Nexus Lifecycle Scans (Single Job)
   # -------------------
-  
-  # 1️⃣ Nexus Source Scan
-  nexus-source:
-    name: Nexus IQ – Source
+  nexus-lifecycle:
+    name: Nexus Lifecycle Scans
     runs-on: self-hosted
     needs: build-test
     env:
@@ -158,9 +156,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
   
-      - name: Find CLI Jar
+      - name: Prepare Nexus Scan Environment
         shell: cmd
         run: |
+          rem Extract repository name from GitHub repo
+          for /f "tokens=2 delims=/" %%a in ("%GITHUB_REPOSITORY%") do set "REPO_NAME=%%a"
+          echo REPO_NAME=%REPO_NAME%>>%GITHUB_ENV%
+          echo Repo name: %REPO_NAME%
+  
+          rem Find CLI jar
           for /r "%GITHUB_WORKSPACE%\tools" %%F in (cli.jar) do (
             set "CLI=%%F"
             goto :found_cli
@@ -171,9 +175,7 @@ jobs:
           echo CLI_PATH=%CLI%>>%GITHUB_ENV%
           echo Found CLI at %CLI%
   
-      - name: Find Project
-        shell: cmd
-        run: |
+          rem Find project file
           for /r "%GITHUB_WORKSPACE%" %%F in (*.csproj) do (
             set "PROJ=%%F"
             goto :found_proj
@@ -182,14 +184,15 @@ jobs:
           exit /b 1
           :found_proj
           echo PROJ_PATH=%PROJ%>>%GITHUB_ENV%
+          echo Found project at %PROJ%
   
-      - name: Run Nexus Source Scan
+      # -------------------
+      # 1️⃣ Nexus Source Scan
+      # -------------------
+      - name: Nexus Source Scan
         shell: cmd
         run: |
-          for /f "tokens=2 delims=/" %%a in ("%GITHUB_REPOSITORY%") do set "REPO_NAME=%%a"
-          echo Repo name: %REPO_NAME%
           java -jar "%CLI_PATH%" -i "%REPO_NAME%" -s "%IQ_SERVER_URL%" -a %IQ_USER%:%IQ_PASS% -t source "%PROJ_PATH%" -o json
-
   
       - name: Upload Source Scan
         uses: actions/upload-artifact@v4
@@ -197,47 +200,13 @@ jobs:
           name: iq-source.json
           path: iq-source.json
   
-  # 2️⃣ Nexus Build Scan
-  nexus-build:
-    name: Nexus IQ – Build
-    runs-on: self-hosted
-    needs: build-test
-    env:
-      IQ_USER: ${{ secrets.IQ_USER }}
-      IQ_PASS: ${{ secrets.IQ_PASS }}
-      IQ_SERVER_URL: ${{ secrets.IQ_SERVER_URL }}
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-  
-      - name: Find CLI Jar
+      # -------------------
+      # 2️⃣ Nexus Build Scan
+      # -------------------
+      - name: Nexus Build Scan
         shell: cmd
         run: |
-          for /r "%GITHUB_WORKSPACE%\tools" %%F in (cli.jar) do (
-            set "CLI=%%F"
-            goto :found_cli
-          )
-          echo CLI jar not found!
-          exit /b 1
-          :found_cli
-          echo CLI_PATH=%CLI%>>%GITHUB_ENV%
-  
-      - name: Find Project
-        shell: cmd
-        run: |
-          for /r "%GITHUB_WORKSPACE%" %%F in (*.csproj) do (
-            set "PROJ=%%F"
-            goto :found_proj
-          )
-          echo Project not found!
-          exit /b 1
-          :found_proj
-          echo PROJ_PATH=%PROJ%>>%GITHUB_ENV%
-  
-      - name: Run Nexus Build Scan
-        shell: cmd
-        run: |
-          java -jar "%CLI_PATH%" -i "%GITHUB_REPOSITORY%" -s "%IQ_SERVER_URL%" -a %IQ_USER%:%IQ_PASS% -t build "%PROJ_PATH%" -o json
+          java -jar "%CLI_PATH%" -i "%REPO_NAME%" -s "%IQ_SERVER_URL%" -a %IQ_USER%:%IQ_PASS% -t build "%PROJ_PATH%" -o json
   
       - name: Upload Build Scan
         uses: actions/upload-artifact@v4
@@ -245,99 +214,33 @@ jobs:
           name: iq-build.json
           path: iq-build.json
   
-  # 3️⃣ Nexus Stage Release Scan (only on develop)
-  nexus-stage-release:
-    name: Nexus IQ – Stage Release
-    runs-on: self-hosted
-    needs: build-test
-    if: github.event_name == 'pull_request' && github.base_ref == 'develop' || github.event_name == 'push' && github.ref == 'refs/heads/develop'
-    env:
-      IQ_USER: ${{ secrets.IQ_USER }}
-      IQ_PASS: ${{ secrets.IQ_PASS }}
-      IQ_SERVER_URL: ${{ secrets.IQ_SERVER_URL }}
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-  
-      - name: Find CLI Jar
+      # -------------------
+      # 3️⃣ Nexus Stage Release Scan (only on develop)
+      # -------------------
+      - name: Nexus Stage Release Scan
+        if: github.event_name == 'pull_request' && github.base_ref == 'develop' || github.event_name == 'push' && github.ref == 'refs/heads/develop'
         shell: cmd
         run: |
-          for /r "%GITHUB_WORKSPACE%\tools" %%F in (cli.jar) do (
-            set "CLI=%%F"
-            goto :found_cli
-          )
-          echo CLI jar not found!
-          exit /b 1
-          :found_cli
-          echo CLI_PATH=%CLI%>>%GITHUB_ENV%
-  
-      - name: Find Project
-        shell: cmd
-        run: |
-          for /r "%GITHUB_WORKSPACE%" %%F in (*.csproj) do (
-            set "PROJ=%%F"
-            goto :found_proj
-          )
-          echo Project not found!
-          exit /b 1
-          :found_proj
-          echo PROJ_PATH=%PROJ%>>%GITHUB_ENV%
-  
-      - name: Run Nexus Stage Release Scan
-        shell: cmd
-        run: |
-          java -jar "%CLI_PATH%" -i "%GITHUB_REPOSITORY%" -s "%IQ_SERVER_URL%" -a %IQ_USER%:%IQ_PASS% -t stage-release "%PROJ_PATH%" -o json
+          java -jar "%CLI_PATH%" -i "%REPO_NAME%" -s "%IQ_SERVER_URL%" -a %IQ_USER%:%IQ_PASS% -t stage-release "%PROJ_PATH%" -o json
   
       - name: Upload Stage Release Scan
+        if: github.event_name == 'pull_request' && github.base_ref == 'develop' || github.event_name == 'push' && github.ref == 'refs/heads/develop'
         uses: actions/upload-artifact@v4
         with:
           name: iq-stage-release.json
           path: iq-stage-release.json
   
-  # 4️⃣ Nexus Release Scan (only on main)
-  nexus-release:
-    name: Nexus IQ – Release
-    runs-on: self-hosted
-    needs: build-test
-    if: github.event_name == 'pull_request' && github.base_ref == 'main' || github.event_name == 'push' && github.ref == 'refs/heads/main'
-    env:
-      IQ_USER: ${{ secrets.IQ_USER }}
-      IQ_PASS: ${{ secrets.IQ_PASS }}
-      IQ_SERVER_URL: ${{ secrets.IQ_SERVER_URL }}
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-  
-      - name: Find CLI Jar
+      # -------------------
+      # 4️⃣ Nexus Release Scan (only on main)
+      # -------------------
+      - name: Nexus Release Scan
+        if: github.event_name == 'pull_request' && github.base_ref == 'main' || github.event_name == 'push' && github.ref == 'refs/heads/main'
         shell: cmd
         run: |
-          for /r "%GITHUB_WORKSPACE%\tools" %%F in (cli.jar) do (
-            set "CLI=%%F"
-            goto :found_cli
-          )
-          echo CLI jar not found!
-          exit /b 1
-          :found_cli
-          echo CLI_PATH=%CLI%>>%GITHUB_ENV%
-  
-      - name: Find Project
-        shell: cmd
-        run: |
-          for /r "%GITHUB_WORKSPACE%" %%F in (*.csproj) do (
-            set "PROJ=%%F"
-            goto :found_proj
-          )
-          echo Project not found!
-          exit /b 1
-          :found_proj
-          echo PROJ_PATH=%PROJ%>>%GITHUB_ENV%
-  
-      - name: Run Nexus Release Scan
-        shell: cmd
-        run: |
-          java -jar "%CLI_PATH%" -i "%GITHUB_REPOSITORY%" -s "%IQ_SERVER_URL%" -a %IQ_USER%:%IQ_PASS% -t release "%PROJ_PATH%" -o json
+          java -jar "%CLI_PATH%" -i "%REPO_NAME%" -s "%IQ_SERVER_URL%" -a %IQ_USER%:%IQ_PASS% -t release "%PROJ_PATH%" -o json
   
       - name: Upload Release Scan
+        if: github.event_name == 'pull_request' && github.base_ref == 'main' || github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: actions/upload-artifact@v4
         with:
           name: iq-release.json
