--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -394,3 +394,42 @@ jobs:
             iq-build.json
             iq-stage-release.json
             iq-release.json
+  # -------------------
+  # 6️⃣ GitHub Release (Dev / Prod via Tags)
+  # -------------------
+  github-release:
+    name: GitHub Release
+    runs-on: ubuntu-latest
+    needs:
+      - build-test
+      - nexus-source
+      - nexus-build
+      - nexus-stage-release
+      - nexus-release
+    if: startsWith(github.ref, 'refs/tags/')
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Determine Release Type
+        id: release_type
+        run: |
+          echo "TAG=${GITHUB_REF_NAME}" >> $GITHUB_ENV
+          if [[ "${GITHUB_REF_NAME}" == dev-* ]]; then
+            echo "PRERELEASE=true" >> $GITHUB_ENV
+          else
+            echo "PRERELEASE=false" >> $GITHUB_ENV
+          fi
+
+      - name: Create GitHub Release
+        uses: ncipollo/release-action@v1
+        with:
+          tag: ${{ env.TAG }}
+          name: Release ${{ env.TAG }}
+          draft: false
+          prerelease: ${{ env.PRERELEASE }}
+          artifacts: |
+            iq-source.json
+            iq-build.json
+            iq-stage-release.json
+            iq-release.json
